Uploading Whackamole for my portfolio.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,11 @@ body {
 			text-align: center;
 		}
 	}
+
+/* Portfolio */
+.box {
+	width: 300px;
+	height: 300px;
+	/*border: solid black 1px;*/
+	float: left;
+}
