--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,8 @@
 body {
   background-image: url("../img/rocks.jpg"); 
   background-size: cover;
-  background-attachment: fixed; 
+  background-attachment: fixed;
+  background-repeat: no-repeat; 
 }
 #background {
 	background-image: url("../img/blueback.png");
