--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,3 +33,14 @@ body {
 	/*border: solid black 1px;*/
 	float: left;
 }
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 60px;
+	background-color: black;
+	color: white;
+	text-align: center;
+	padding-top: 15px;
+	font-size: 20px;
+}
