--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,16 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat; 
+  height: 100%;
 }
-#background {
+
+.background {
+	min-height: 700px;
 	background-image: url("../img/blueback.png");
 	padding-top: 85px;
 	padding-bottom: 20px;
+	background-repeat: no-repeat;
+	background-size: cover;
 	position: relative;
 	}
 		a:link {
@@ -34,7 +39,7 @@ body {
 	float: left;
 }
 .footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
@@ -43,4 +48,8 @@ body {
 	text-align: center;
 	padding-top: 15px;
 	font-size: 20px;
+}
+
+.login {
+	margin-top: 100px;
 }
