--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,42 +1,36 @@
 
-
 body {
   background-image: url("../img/rocks.jpg"); 
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat; 
-  height: 100%;
 }
 
 .background {
-	min-height: 700px;
+	min-height: 800px;
 	background-image: url("../img/blueback.png");
-	padding-top: 85px;
-	padding-bottom: 20px;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
-	}
-		a:link {
-	 		color:black;
-		} a:visited {
- 			color:black;
-		} a:hover {
- 			color:purple;
- 		} a:active {
-			color: green;
-		}
-		.center {
-			text-align: center;
-		}
-	}
+}
 
+a:link {
+	color:black;
+} a:visited {
+	color:black;
+} a:hover {
+	color:purple;
+} a:active {
+	color: green;
+}
+.content{
+	padding-bottom: 100px;
+	padding-top: 100px;
+}
 /* Portfolio */
 .box {
 	width: 300px;
 	height: 300px;
-	/*border: solid black 1px;*/
-	float: left;
 }
 .footer {
 	position: fixed;
