--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ a:link {
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: black;
+	background-color: #2e2e2e;
 	color: white;
 	text-align: center;
 	padding-top: 15px;
