--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,39 +1,13 @@
-
-body {
-  background-image: url("../img/rocks.jpg"); 
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat; 
+.title{
+	font-family: "Tahoma", serif;
+	font-size: 30px;
+	text-transform: uppercase;
+	padding-bottom: 20px;
+	padding-top: 20px;
 }
 
-.background {
-	min-height: 800px;
-	background-image: url("../img/blueback.png");
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
-}
-
-a:link {
-	color:black;
-} a:visited {
-	color:black;
-} a:hover {
-	color:purple;
-} a:active {
-	color: green;
-}
-.content{
-	padding-bottom: 100px;
-	padding-top: 100px;
-}
-/* Portfolio */
-.box {
-	width: 300px;
-	height: 300px;
-}
 .footer {
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 	height: 60px;
@@ -46,4 +20,102 @@ a:link {
 
 .navbar{
 	margin-bottom: 0px;
+}
+
+.post {
+	height: 200px;
+	width: 400px;
+}
+
+.show {
+	margin-top: 100px;
+	padding-top: 100px;
+	display: block;
+	margin: 0 auto;
+	width: 600px;
+	border: 10px solid gray;
+	background-color: white;
+}
+
+/*parallax*/
+section.module:last-child {
+	margin-bottom: 0;
+}
+section.module h2 {
+	margin-bottom: 40px;
+	font-family: "Tahoma", serif;
+	font-size: 30px;
+}
+
+section.module h3 {
+	margin-bottom: 40px;
+	font-family: "Tahoma", serif;
+	font-size: 30px;
+	color: rgba(255, 255, 255, 0.8);
+	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
+	text-shadow: 2px 2px 4px #000000;
+}
+
+section.module p {
+	margin-bottom: 40px;
+	font-size: 16px;
+	font-weight: 300;
+}
+section.module p:last-child {
+	margin-bottom: 0;
+}
+section.module.content {
+	padding: 40px 0;
+	background-color: #b0a187; 
+}
+section.module.parallax {
+	height: 700px;
+	background-position: 50% 50%;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
+}
+section.module.parallax h1, h2 {
+	padding-top: 100px;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 48px;
+	line-height: 100px;
+	font-weight: 400;
+	text-align: center;
+	text-transform: uppercase;
+	text-shadow: 2px 2px 4px #000000;
+}
+section.module.parallax-1 {
+	background-image: url("../img/rocks.jpg");
+}
+section.module.parallax-2 {
+	background-image: url("../img/rocks.jpg");
+}
+
+@media all and (min-width: 600px) {
+	section.module p {
+		font-size: 20px;
+	}
+  	section.module.parallax h1 {
+  		font-size: 96px;
+	}
+}
+
+@media all and (min-width: 960px) {
+  	section.module.parallax h1, {
+		font-size: 75px;
+  	}
+}
+@media all and (min-width: 960px) {
+	section.module.parallax h2, {
+		font-size: 40px;
+  	}
+}
+
+@media all and (min-width: 960px) {
+  	section.module.parallax h3, {
+    	font-size: 30px;
+  	}
 }
