--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,16 @@
+
+@import url(//fonts.googleapis.com/css?family=Lato:700);
+
 .title{
-	font-family: "Tahoma", serif;
+	font-family:'Lato', sans-serif;
 	font-size: 30px;
 	text-transform: uppercase;
 	padding-bottom: 20px;
 	padding-top: 20px;
 }
-
+.flash {
+	margin-top: 50px;
+}
 .footer {
 	position: relative;
 	bottom: 0;
