--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #2e2e2e;
+	background: #141414;
 	color: white;
 	text-align: center;
 	padding-top: 15px;
@@ -25,6 +25,7 @@
 
 .navbar{
 	margin-bottom: 0px;
+	background: #141414;
 }
 
 .post {
