Updated the failed to aunthenticate CSS as it was  creating a margin bottom.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,9 @@
 	border: 10px solid gray;
 	background-color: white;
 }
+.alert {
+	margin-bottom: 0px;
+}
 
 /*parallax*/
 section.module:last-child {
