CSS changes and got the delete button to work with the addition of the form actually calling the Post Controller.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 
 @import url(//fonts.googleapis.com/css?family=Lato:700);
 
+/*main*/
 .title{
 	font-family:'Lato', sans-serif;
 	font-size: 30px;
@@ -11,6 +12,64 @@
 .flash {
 	margin-top: 50px;
 }
+
+/*buttons*/
+.button {
+	font-size: 1.2em;
+	padding: .6em;
+	border: .2em solid #000;
+	text-transform: uppercase;
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
+	-moz-transition: all 300ms;
+	-o-transition: all 300ms;
+	-webkit-transition: all 300ms;
+	transition: all 300ms;
+}
+
+.button:hover {
+	border: .2em solid white;
+	color: black;
+	background-color: white;
+	text-decoration: none;
+	-moz-transition: all 300ms;
+	-o-transition: all 300ms;
+	-webkit-transition: all 300ms;
+	transition: all 300ms; 
+}
+
+.deletebtn {
+	font-size: 1.2em;
+	padding: .6em;
+	border: .2em solid #000;
+	text-transform: uppercase;
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
+	-moz-transition: all 300ms;
+	-o-transition: all 300ms;
+	-webkit-transition: all 300ms;
+	transition: all 300ms;
+}
+
+
+.deletebtn:hover {
+	border: .2em solid white;
+	color: red;
+	background-color: white;
+	-moz-transition: all 300ms;
+	-o-transition: all 300ms;
+	-webkit-transition: all 300ms;
+	transition: all 300ms; 
+}
+
+.glyphicon {
+	background-color: #141414;
+	color: white;
+	border-color: #141414;
+}
+/*bars*/
 .footer {
 	position: relative;
 	bottom: 0;
@@ -42,8 +101,13 @@
 	border: 10px solid gray;
 	background-color: white;
 }
+
 .alert {
 	margin-bottom: 0px;
+}
+
+.formtitles {
+	color: white;
 }
 
 /*parallax*/
@@ -77,7 +141,8 @@ section.module p:last-child {
 }
 section.module.content {
 	padding: 40px 0;
-	background-color: #b0a187; 
+	color: white;
+	background-color: #3f484f; 
 }
 section.module.parallax {
 	height: 700px;
