--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,6 @@
 
 @import url(//fonts.googleapis.com/css?family=Lato:700);
 
-body {
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-	padding: 0px;
-	overflow-x: hidden;
-}
-
 /*main*/
 @media screen and (max-width: 480px) {
 	.heading {
@@ -25,10 +17,6 @@ body {
 	color: #cecece;
 }
 
-.experienceboxes {
-	
-}
-
 .experience {
 	font-size: 20px;
 }
@@ -37,7 +25,6 @@ body {
 	width: 30%;
 	float: left;
 	margin-left: 10%;
-
 }
 
 .box2 {
@@ -159,6 +146,7 @@ h4 {
 .blogbtn {
 	font-size: 1.2em;
 	padding: .6em;
+	margin-bottom: .6em;
 	border: .2em solid #000;
 	text-transform: uppercase;
 	color: black;
@@ -265,15 +253,14 @@ h4 {
 	color: #cecece;
 }
 
-
 /*blog*/
-
 .blogcontent {
 	padding: 5%;
   	margin: 0 auto;
 	text-align: center;
 	color: #cecece;
 }
+
 .posttitle {
 	margin: 50px;
 	font-size: 2em;
@@ -281,7 +268,8 @@ h4 {
 }
 
 .blogbox {
-	height: 225px;
+	height: auto;
+	min-height: 300px;
 	width: 30%;
 	float: left;
 	margin-left: 12%;
@@ -290,17 +278,56 @@ h4 {
 	border-style: solid;
 	background-color: #cecece;
 	margin-top: 20px;
-
 }
+
 @media screen and (max-width: 480px) {
 	.blogbox {
 	width: 100%;
 	text-align: center;
 	margin: 0 auto;
 	margin-top: 20px;
+	background-color: #cecece;
 	}
 }
 
+@media screen and (max-width: 700px) {
+	.blogbox {
+	width: 100%;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 20px;
+	background-color: #cecece;
+	}
+}
+
+.userbuttons {
+	margin-top: 50px;
+	width: 100%;
+}
+
+.userbuttons:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.userbutton1 {
+	width: 50%;
+	float: left;
+	text-align: center;
+}
+
+.userbutton2 {
+	width: 50%;
+	text-align: center;
+	float: right;
+}
+
+.postbuttons {
+	margin-top: 50px;
+	text-align: center;
+	width: 100%;
+}
 .newpost {
 	width: 70%;
 	min-height: 100%;
