--- a/public/css/style.css
+++ b/public/css/style.css
@@ -274,29 +274,36 @@ h4 {
 	float: left;
 	margin-left: 12%;
 	border-color: black;
-	border: 2px;
-	border-style: solid;
+	border-style: 2px solid;
 	background-color: #cecece;
 	margin-top: 20px;
 }
 
 @media screen and (max-width: 480px) {
 	.blogbox {
-	width: 100%;
-	text-align: center;
-	margin: 0 auto;
-	margin-top: 20px;
-	background-color: #cecece;
+		height: auto;
+		min-height: 250px;
+		width: 100%;
+		text-align: center;
+		margin: 0 auto;
+		margin-top: 20px;
+		border-color: black;
+		border-style: 2px solid;
+		background-color: #cecece;
 	}
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
 	.blogbox {
-	width: 100%;
-	text-align: center;
-	margin: 0 auto;
-	margin-top: 20px;
-	background-color: #cecece;
+		height: auto;
+		min-height: 250px;
+		width: 100%;
+		text-align: center;
+		margin: 0 auto;
+		margin-top: 20px;
+		border-color: black;
+		border-style: 2px solid;
+		background-color: #cecece;
 	}
 }
 
@@ -328,10 +335,20 @@ h4 {
 	text-align: center;
 	width: 100%;
 }
+
+@media screen and (max-width: 480px) { 
+	.postbuttons {
+		margin-top: 50px;
+		text-align: center;
+		width: 100%;
+	}
+}
+
 .newpost {
-	width: 70%;
+	width: 60%;
 	min-height: 100%;
 	margin: 0 auto;
+	text-align: center;
 }
 
 @media screen and (max-width: 480px) { 
